--- a/assets/forms.scss
+++ b/assets/forms.scss
@@ -2,6 +2,11 @@ $border-color: #B7B7B7;
 $text-color: #333333;
 $white: #FFFFFF;
 
+.btn {
+  font-size: 16px;
+  font-weight: bold;
+}
+
 .full-width {
   display: block;
   width: 100%;
