--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -138,6 +138,11 @@
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
     <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
   </ul>
+  <div hidden>
+    <span id="new-window-0">Opens in a new window</span>
+    <span id="new-window-1">Opens an external site</span>
+    <span id="new-window-2">Opens an external site in a new window</span>  
+  </div>
   <script>
     window.theme = window.theme || {};
     theme.routes = {
