--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -66,7 +66,6 @@
               </a>
             </li>
           {% endfor %}
-
         </ul>
       {% endif %}
 
@@ -154,8 +153,8 @@
             <div class="grid">
               {% if section.settings.product_quantity_enable %}
                 <div class="grid__item medium-up--one-third">
-                  <label for="Quantity" class="form__label">{{ 'products.product.quantity' | t }}</label>
-                  <input type="number" id="Quantity" name="quantity" value="1" min="1"{% if use_pallet == true %} max="6"{% endif %} class="form__input full-width">
+                  <label for="Quantity" class="form__label">{{ 'products.product.quantity' | t }}{% if use_pallet == true %} (sq ft){% endif %}</label>
+                  <input type="number" id="Quantity" name="quantity" value="1" min="1"{% if use_pallet == true %} max="3000"{% endif %} class="form__input full-width">
                 </div>
               {% endif %}
               <div class="grid__item medium-up--two-thirds">
