--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -18,7 +18,7 @@
   {% endcase %}
 
   <div class="collection-grid">
-    <div class="grid grid--uniform">
+    <div class="grid grid--uniform" role="list">
       {% for block in section.blocks limit: section.blocks.size %}
         <div class="grid__item {{ grid_item_width }} slide-up-animation animated" {{ block.shopify_attributes }} role="listitem">
           {%- assign collection = collections[block.settings.collection] -%}
