--- a/assets/collection.scss
+++ b/assets/collection.scss
@@ -42,7 +42,7 @@ $desk: 1100px;
   padding: 35px 16px;
   margin-bottom: 15px;
 
-  @media all and (min-width: #{$tablet}) {
+  @media all and (min-width: #{$desk}) {
     margin-bottom: 0;
   }
 }
