--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,11 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="{{ settings.color_primary_color }}">
+  {%- if shop.permanent_domain contains 'supersod-staging' -%}
+    <meta name="robots" content="noindex">
+  {%- endif -%}
   <link rel="canonical" href="{{ canonical_url }}">
+  <link rel="manifest" href="/apps/litefy/manifest/">
 
-  {% if settings.favicon %}
+  {%- if settings.favicon -%}
     <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png" />
-  {% endif %}
+    <link rel="apple-touch-icon" href="{{ settings.favicon | img_url: '32x32' }}">
+  {%- endif -%}
 
   <title>
   {{ page_title }}{% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags }}{% endif %}{% if current_page != 1 %} &ndash; {{ 'general.meta.page' | t: page: current_page }}{% endif %}{% unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless %}
