--- a/assets/sidebar-cart.scss
+++ b/assets/sidebar-cart.scss
@@ -1,11 +1,12 @@
 $color_primary: #54a45b;
+$cart_desk: 990px;
 
 .show-cart-summary {
   overflow: hidden;
 }
 
 .cart-summary {
-  width: 20%;
+  width: 100%;
   background: #ffffff;
   position: fixed;
   top: 0;
@@ -15,6 +16,10 @@ $color_primary: #54a45b;
   max-width: 320px;
   z-index: 6;
   transition: transform 600ms ease-in-out;
+
+  @media only screen and (min-width: #{$cart_desk}) {
+    width: 20%;
+  }
 }
 
 .cart-summary .additional-checkout-buttons {
@@ -708,7 +713,7 @@ $color_primary: #54a45b;
   body:not(.template-cart):not(.template-dir-customers) .cart-summary {
     margin-bottom: 5px;
     // border-right: 5px solid $color_primary;
-    height: calc(100vh - 5px * 2);
+    height: calc(100vh * 2);
     transform: translate3d(-100%, 0, 0);
   }
   body:not(.template-cart):not(.template-dir-customers) .cart-summary .cart-summary__inner {
